--- a/src/App.global.css
+++ b/src/App.global.css
@@ -5,7 +5,7 @@
 body {
   position: relative;
   color: white;
-  height: 100vh;
+  min-height: 100vh;
   background: linear-gradient(
     200.96deg,
     #fedc2a -29.09%,
@@ -55,4 +55,9 @@ a:hover {
   justify-content: center;
   align-items: center;
   margin: 20px 0;
+}
+
+#root{
+	width: 100%;
+	padding: 20px;
 }
